--- a/go_module_distroless/Dockerfile
+++ b/go_module_distroless/Dockerfile
@@ -3,6 +3,7 @@
 ############################
 # golang alpine 1.13.5
 FROM golang@sha256:0991060a1447cf648bab7f6bb60335d1243930e38420bee8fec3db1267b84cfa as builder
+
 # Install git + SSL ca certificates.
 # Git is required for fetching the dependencies.
 # Ca-certificates is required to call HTTPS endpoints.
@@ -10,12 +11,16 @@ RUN apk update && apk add --no-cache git ca-certificates tzdata && update-ca-cer
 
 # Create appuser
 RUN adduser -D -g '' appuser
-
 WORKDIR $GOPATH/src/mypackage/myapp/
-COPY . .
 
-# Fetch dependencies.
-RUN go get -d -v
+# use modules
+COPY go.mod .
+
+ENV GO111MODULE=on
+RUN go mod download
+RUN go mod verify
+
+COPY . .
 
 # Build the binary
 RUN CGO_ENABLED=0 GOOS=linux go build -ldflags="-w -s" -a -installsuffix cgo -o /go/bin/hello .
@@ -23,18 +28,11 @@ RUN CGO_ENABLED=0 GOOS=linux go build -ldflags="-w -s" -a -installsuffix cgo -o 
 ############################
 # STEP 2 build a small image
 ############################
-FROM scratch
-
-# Import from builder.
-COPY --from=builder /usr/share/zoneinfo /usr/share/zoneinfo
-COPY --from=builder /etc/ssl/certs/ca-certificates.crt /etc/ssl/certs/
-COPY --from=builder /etc/passwd /etc/passwd
+#using nonroot image
+FROM gcr.io/distroless/base@sha256:2b177fbc9a31b85254d264e1fc9a65accc6636d6f1033631b9b086ee589d1fe2
 
 # Copy our static executable
 COPY --from=builder /go/bin/hello /go/bin/hello
-
-# Use an unprivileged user.
-USER appuser
 
 # Run the hello binary.
 ENTRYPOINT ["/go/bin/hello"]
