use gcr.io/distroless/static instead of base

--- a/go_module_distroless/Dockerfile
+++ b/go_module_distroless/Dockerfile
@@ -29,7 +29,7 @@ RUN CGO_ENABLED=0 GOOS=linux go build -ldflags="-w -s" -a -installsuffix cgo -o 
 # STEP 2 build a small image
 ############################
 #using nonroot image
-FROM gcr.io/distroless/base@sha256:2b177fbc9a31b85254d264e1fc9a65accc6636d6f1033631b9b086ee589d1fe2
+FROM gcr.io/distroless/static@sha256:08322afd57db6c2fd7a4264bf0edd9913176835585493144ee9ffe0c8b576a76
 
 # Copy our static executable
 COPY --from=builder /go/bin/hello /go/bin/hello
