Correct makefile for static
Signed-off-by: Steve Coffman <steve@khanacademy.org>

--- a/go_module_distroless_static/Makefile
+++ b/go_module_distroless_static/Makefile
@@ -8,24 +8,24 @@ help: ## - Show help message
 	@grep -E '^[a-zA-Z_-]+:.*?## .*$$' $(MAKEFILE_LIST) | sort | awk 'BEGIN {FS = ":.*?## "}; {printf "\033[36m%-30s\033[0m %s\n", $$1, $$2}'
 
 .PHONY: build
-build:	## - Build the smallest and secured golang docker image based on scratch
-	@printf "\033[32m\xE2\x9c\x93 Build the smallest and secured golang docker image based on scratch\n\033[0m"
-	@export DOCKER_CONTENT_TRUST=1 && docker build -f Dockerfile -t smallest-secured-golang-distroless .
+build:	## - Build the smallest and secured golang docker image based on distroless
+	@printf "\033[32m\xE2\x9c\x93 Build the smallest and secured golang docker image based on distroless\n\033[0m"
+	@export DOCKER_CONTENT_TRUST=1 && docker build -f Dockerfile -t smallest-secured-golang-distroless-static .
 
 .PHONY: build-no-cache
 build-no-cache:	## - Build the smallest and secured golang docker image based on scratch with no cache
 	@printf "\033[32m\xE2\x9c\x93 Build the smallest and secured golang docker image based on scratch\n\033[0m"
-	@export DOCKER_CONTENT_TRUST=1 && docker build --no-cache -f Dockerfile -t smallest-secured-golang-distroless .
+	@export DOCKER_CONTENT_TRUST=1 && docker build --no-cache -f Dockerfile -t smallest-secured-golang-distroless-static .
 
 .PHONY: ls
 ls: ## - List 'smallest-secured-golang' docker images
 	@printf "\033[32m\xE2\x9c\x93 Look at the size dude !\n\033[0m"
-	@docker image ls smallest-secured-golang-distroless
+	@docker image ls smallest-secured-golang-distroless-static
 
 .PHONY: run
-run:	## - Run the smallest and secured golang docker image based on scratch
+run:	## - Run the smallest and secured golang docker image based on distroless
 	@printf "\033[32m\xE2\x9c\x93 Run the smallest and secured golang docker image based on scratch\n\033[0m"
-	@docker run smallest-secured-golang-distroless:latest
+	@docker run smallest-secured-golang-distroless-static:latest
 
 .PHONY: push-to-azure
 push-to-azure:	## - Push docker image to azurecr.io container registry
