--- a/go_module_distroless_static/Makefile
+++ b/go_module_distroless_static/Makefile
@@ -8,8 +8,8 @@ help: ## - Show help message
 	@grep -E '^[a-zA-Z_-]+:.*?## .*$$' $(MAKEFILE_LIST) | sort | awk 'BEGIN {FS = ":.*?## "}; {printf "\033[36m%-30s\033[0m %s\n", $$1, $$2}'
 
 .PHONY: build
-build:	## - Build the smallest and secured golang docker image based on distroless
-	@printf "\033[32m\xE2\x9c\x93 Build the smallest and secured golang docker image based on distroless\n\033[0m"
+build:	## - Build the smallest and secured golang docker image based on distroless static
+	@printf "\033[32m\xE2\x9c\x93 Build the smallest and secured golang docker image based on distroless static\n\033[0m"
 	@export DOCKER_CONTENT_TRUST=1 && docker build -f Dockerfile -t smallest-secured-golang-distroless-static .
 
 .PHONY: build-no-cache
@@ -23,7 +23,7 @@ ls: ## - List 'smallest-secured-golang' docker images
 	@docker image ls smallest-secured-golang-distroless-static
 
 .PHONY: run
-run:	## - Run the smallest and secured golang docker image based on distroless
+run:	## - Run the smallest and secured golang docker image based on distroless static
 	@printf "\033[32m\xE2\x9c\x93 Run the smallest and secured golang docker image based on scratch\n\033[0m"
 	@docker run smallest-secured-golang-distroless-static:latest
 
