✨ add consistency in naming, propagate aws push to all go modules
Signed-off-by: jbleduigou <jb.leduigou@gmail.com>

--- a/go_module/Makefile
+++ b/go_module/Makefile
@@ -1,6 +1,10 @@
 VERSION=`git rev-parse HEAD`
 BUILD=`date +%FT%T%z`
 LDFLAGS=-ldflags "-X main.Version=${VERSION} -X main.Build=${BUILD}"
+# AWS related variables, eu-west-3 is Paris region
+AWS_REGION=eu-west-3
+AWS_ACCOUNT_NUMBER=123412341234
+
 
 .PHONY: help
 help: ## - Show help message
@@ -27,13 +31,19 @@ run:	## - Run the smallest and secured golang docker image based on scratch
 	@printf "\033[32m\xE2\x9c\x93 Run the smallest and secured golang docker image based on scratch\n\033[0m"
 	@docker run smallest-secured-golang:latest
 
+.PHONY: push-to-aws
+push-to-aws:	## - Push docker image to AWS Elastic Container Registry
+	@aws ecr get-login-password --region $(AWS_REGION) | docker login --username AWS --password-stdin $(AWS_ACCOUNT_NUMBER).dkr.ecr.$(AWS_REGION).amazonaws.com
+	@docker tag smallest-secured-golang:latest $(AWS_ACCOUNT_NUMBER).dkr.ecr.$(AWS_REGION).amazonaws.com/smallest-secured-golang-docker-image:$(VERSION)
+	@docker push $(AWS_ACCOUNT_NUMBER).dkr.ecr.$(AWS_REGION).amazonaws.com/smallest-secured-golang-docker-image:$(VERSION)
+
 .PHONY: push-to-azure
-push-to-azure:	## - Push docker image to azurecr.io container registry
+push-to-azure:	## - Push docker image to azurecr.io Container Registry
 	@az acr login --name chemidy
 	@docker push chemidy.azurecr.io/smallest-secured-golang-docker-image:$(VERSION)
 
 .PHONY: push-to-gcp
-push-to-gcp:	## - Push docker image to gcr.io container registry
+push-to-gcp:	## - Push docker image to gcr.io Container Registry
 	@gcloud auth application-default login
 	@gcloud auth configure-docker
 	@docker push gcr.io/chemidy/smallest-secured-golang-docker-image:$(VERSION)
