--- a/go_module_distroless/Makefile
+++ b/go_module_distroless/Makefile
@@ -22,14 +22,18 @@ docker-pull:	## - docker pull latest images
 	@docker pull gcr.io/distroless/base
 
 .PHONY: build
-build:	## - Build the smallest and secured golang docker image based on distroless
+build:docker-pull	## - Build the smallest and secured golang docker image based on distroless
 	@printf "\033[32m\xE2\x9c\x93 Build the smallest and secured golang docker image based on distroless\n\033[0m"
-	@export DOCKER_CONTENT_TRUST=1 && docker build -f Dockerfile -t smallest-secured-golang-distroless .
+	$(eval BUILDER_IMAGE=$(shell docker inspect --format='{{index .RepoDigests 0}}' golang:buster))
+	$(eval DISTROLESS_IMAGE=$(shell docker inspect --format='{{index .RepoDigests 0}}' gcr.io/distroless/base))
+	@export DOCKER_CONTENT_TRUST=1 && docker build -f Dockerfile --build-arg BUILDER_IMAGE=$(BUILDER_IMAGE) --build-arg DISTROLESS_IMAGE=$(DISTROLESS_IMAGE) -t smallest-secured-golang-distroless .
 
 .PHONY: build-no-cache
-build-no-cache:	## - Build the smallest and secured golang docker image based on scratch with no cache
+build-no-cache:docker-pull	## - Build the smallest and secured golang docker image based on scratch with no cache
 	@printf "\033[32m\xE2\x9c\x93 Build the smallest and secured golang docker image based on scratch\n\033[0m"
-	@export DOCKER_CONTENT_TRUST=1 && docker build --no-cache -f Dockerfile -t smallest-secured-golang-distroless .
+	$(eval BUILDER_IMAGE=$(shell docker inspect --format='{{index .RepoDigests 0}}' golang:buster))
+	$(eval DISTROLESS_IMAGE=$(shell docker inspect --format='{{index .RepoDigests 0}}' gcr.io/distroless/base))
+	@export DOCKER_CONTENT_TRUST=1 && docker build --no-cache --build-arg BUILDER_IMAGE=$(BUILDER_IMAGE) --build-arg DISTROLESS_IMAGE=$(DISTROLESS_IMAGE) -f Dockerfile -t smallest-secured-golang-distroless .
 
 .PHONY: ls
 ls: ## - List 'smallest-secured-golang' docker images
